--- a/index.qmd
+++ b/index.qmd
@@ -18,10 +18,10 @@ about:
 
 ### Mason Posner
 
-Trustees Distinguished Professor of Biology\
+Trustees' Distinguished Professor of Biology\
 Ashland University\
 Department of Biology and Toxicology
 
 I am a Professor in the Department of Biology and Toxicology in the College of Arts and Sciences at Ashland University, a medium sized private institution in Ohio. My undergraduate research students and I use a small tropical fish called the zebrafish to study the development of the ocular lens and what can go wrong to produce cataracts, one of the leading causes of human blindness. We use CRISPR gene editing to investigate the molecular machinery behind lens biology and aging with the support of funding from the National Eye Institute.\
 \
-I teach a number of courses including Marine Biology, Zoology, Cell Biology, and Molecular Biology, as well as a seminar on professional development for science majors. I direct Ashland University's Choose Ohio First scholarship program for STEM students and co-founded the Ohio Zebrafish Undergraduate Research Conference (OHZU).
+I teach a number of courses including Marine Biology, Vertebrate Biology, Cell Biology, and Molecular Biology, as well as a seminar on professional development for science majors. I direct Ashland University's Choose Ohio First scholarship program for STEM students and co-founded the Ohio Zebrafish Undergraduate Research Conference (OHZU).
