--- a/research.qmd
+++ b/research.qmd
@@ -34,6 +34,8 @@ Many molecular tools, like CRISPR gene editing, allow us to tinker with zebrafis
 ## What genes regulate eye lens development? 
 Previous work from many labs have identified a number of gene required to make a healthy eye lens. Much of this work is done in mammal model species, like the mouse. Here [is an excellent review](https://www.cell.com/trends/genetics/abstract/S0168-9525(17)30133-6) of what is known about the molecular control of lens development. However, there are multiple open questions about lens development and likely many undiscovered controls on the process. We recently worked with our colleague Dylan Farnsworth at the University at Albany to publish [the first atlas describing gene expression at the individual cell level during lens development for any vertebrate species](https://pubmed.ncbi.nlm.nih.gov/33705730/). This zebrafish data showed that there are numerous genes that are highly expressed in lens cells with no currently known lens function. We are using CRISPR/Cas9 editing to damage these genes to identify novel mechanisms involved in lens development.
 
+![Undergraduate research students in the lab present results from our screen of novel lens development genes at ARVO meeting in 2025](media/arvo 25.jpg){width=6in}
+
 ## How do the most abundant proteins in the lens work?
 The primary job of the lens is to focus incoming light on the retina so that we can produce clear images of our surroundings. Focusing light requires that it be bent, or refracted, much like the light passing through a camera lens. The lens produces this refraction by packing its central fiber cells with large quantities of proteins called lens crystallins. We have used zebrafish to better [understand the role that these proteins play during lens development](https://pubmed.ncbi.nlm.nih.gov/36572168/) and to [compare their function to the same proteins in humans](http://www.molvis.org/molvis/v11/a10/). We have even compared the same lens crystallin protein in animals living in a wide range of temperatures, including the antarctic toothfish, [to discover how the protein evolves to function at these temperatures](https://pubmed.ncbi.nlm.nih.gov/22479631/).\
 
